--- a/css/rectangle.css
+++ b/css/rectangle.css
@@ -1,12 +1,31 @@
 #rectangle{
-    margin-left: 65%;
-    width: 330px;
-    height:400px;
+    margin-left: 70%;
+    width: 400px;
+    height:600px;
     background:#d7d4d4;
     border-radius: 40px;
     box-shadow: 25px 15px 15px #838282;
+    transform: perspective( 1500px ) rotateY( -15deg );
+    -webkit-animation: linear infinite;
+    -webkit-animation-name: run;
+    -webkit-animation-duration: 1s;
+    animation-iteration-count: 1;
+                  
 }
-@-webkit-keyframes spin {
-    0%    { -webkit-transform: rotateY(0deg); }
-    100%  { -webkit-transform: rotateY(360deg); }
-    }
+@-webkit-keyframes run {
+  0% {
+    margin-left: 100%;
+  }
+  33% {
+    margin-left: 90%;
+  }
+  66% {
+    margin-left: 80%;
+  }
+  100% {
+    margin-left: 70%;
+  }
+}
+      
+ 
+        
