--- a/css/rectangle.css
+++ b/css/rectangle.css
@@ -1,7 +1,7 @@
 #rectangle{
-    margin-left: 70%;
+    margin-left: auto;
     width: 400px;
-    height:600px;
+    height:400px;
     background:#d7d4d4;
     border-radius: 40px;
     box-shadow: 25px 15px 15px #838282;
@@ -16,14 +16,17 @@
   0% {
     margin-left: 100%;
   }
-  33% {
-    margin-left: 90%;
+  25% {
+    margin-left: 91%;
   }
-  66% {
-    margin-left: 80%;
+  50% {
+    margin-left: 83%;
+  }
+  75% {
+    margin-left: 74%;
   }
   100% {
-    margin-left: 70%;
+    margin-left: auto;
   }
 }
       
