--- a/css/rectangle.css
+++ b/css/rectangle.css
@@ -1,12 +1,12 @@
 #Rectangle_Right{
   padding: 20px;
     margin-left: auto;
-    width: 400px;
-    height:400px;
+    max-width:25%;
+    height:auto;
     background:#d7d4d4;
     border-radius: 40px;
-    box-shadow: 15px 10px 10px #838282;
-    transform: perspective( 1500px ) rotateY( -15deg );
+    box-shadow: 0px 0px 30px #838282;
+    border: 3px;
     animation: runRight 1.5s 1 linear;
                   
 }
@@ -19,9 +19,11 @@
     margin-left: 71.5%;
   }
 }
+
 p {
-  margin: auto;
-  animation:
+    font-size:1vw;
+    margin: auto;
+    animation:
     typing 3.5s steps(40, end),
     blink-caret .75s step-end infinite;
 }
