--- a/css/body.css
+++ b/css/body.css
@@ -1,4 +1,5 @@
-body {
-  background-color: #bcb7b7;
-  padding: 20px;
+body{
+  padding-top: 10px;
+  padding: 10px;
+  background-color: #343232;
 }
