--- a/css/body.css
+++ b/css/body.css
@@ -1,3 +1,9 @@
+html {
+    box-sizing: border-box;
+}
+*, *::before, *::after {
+    box-sizing: inherit;
+}
 body{
   padding-top: 10px;
   padding: 10px;
