--- a/css/body.css
+++ b/css/body.css
@@ -1,11 +1,7 @@
-html {
-    box-sizing: border-box;
-}
-*, *::before, *::after {
-    box-sizing: inherit;
-}
 body{
-  padding-top: 10px;
-  padding: 10px;
-  background-color: #343232;
+  background-image: url("../img/bg.jpg");
+  height: 100%;
+  margin: 0;
+  height: 100%;
+  background-size: cover;
 }
