--- a/css/rectangle.css
+++ b/css/rectangle.css
@@ -1,63 +1,45 @@
-#Rectangle_Right_Up{
-    padding: 20px;
-    margin-left: auto;
-    max-width:25%;
-    height:auto;
-    background:#d7d4d4;
-    border-radius: 40px;
-    box-shadow: 0px 0px 30px #838282;
-    text-align:center;
-    animation: runRight 3s 1 linear;          
+.rectangle {
+  position: fixed;
+  width: auto;
+  height: auto;
+  left: 40px;
+  right: 40px;
+  bottom: 40px;
+  top: 40px;
+  background-color: #dcdedb;
+  border-radius: 20px;
+  border: 1px solid #000000;
+  opacity: 0.85;
 }
-#Rectangle_Right_Middle{
-    padding: 20px;
-    margin-left: auto;
-    max-width:35%;
-    height:auto;
-    background:#d7d4d4;
-    border-radius: 40px;
-    box-shadow: 0px 0px 30px #838282;
-    text-align:center;
-    animation: runRight 1.5s 1 linear;          
-}
-#Rectangle_Right_Down{
-    padding: 20px;
-    margin-left: auto;
-    max-width:55%;
-    height:auto;
-    background:#d7d4d4;
-    border-radius: 40px;
-    box-shadow: 0px 0px 30px #838282;
-    text-align:center;
-    animation: runRight 2s 1 linear;          
+.rectangle_top {
+  padding: 25px;
+  width: auto;
+  height: auto;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  background-color: #b9bcb8;
+  border-bottom:1px solid #c2baba;
 }
 
-@keyframes runRight {
-  from {
-    margin-left: 100%;
-  }
-  to {
-    margin-left: 71.5%;
-  }
-}
+.circle_close {
+  height: 25px;
+  width: 25px;
+  background-color: #FF605C;
+  border-radius: 50%;
 
-p {
-  text-align: center;
-  font-size: 20px;
-  background: linear-gradient(90deg, #000, #d7d4d4);
-  letter-spacing: 5px;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-size: 70%;
-  animation: shine 7s linear infinite;
+  display:inline-block;
 }
-
-@keyframes shine {
-  0% {
-    background-position-x: -500%;
-  }
-  100% {
-    background-position-x: 500%;
-  }
+.circle_minimize {
+  height: 25px;
+  width: 25px;
+  background-color: #FFBD44;
+  border-radius: 50%;
+  display:inline-block;
 }
-        
+.circle_expand {
+  height: 25px;
+  width: 25px;
+  background-color: #00CA4E;
+  border-radius: 50%;
+  display:inline-block;
+}
