--- a/css/body.css
+++ b/css/body.css
@@ -1,7 +1,8 @@
-body{
-  background-image: url("../img/bg.jpg");
-  height: 100%;
-  margin: 0;
-  height: 100%;
+html,body {
   background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-image: url("../img/bg.jpg");
+  width: 100%;
+  height: 100%;
 }
