--- a/css/rectangle.css
+++ b/css/rectangle.css
@@ -12,7 +12,8 @@
   opacity: 0.85;
 }
 .rectangle_top {
-  padding: 25px;
+  padding: 15px;
+  margin: 0px auto;
   width: auto;
   height: auto;
   border-top-left-radius: 20px;
@@ -22,23 +23,23 @@
 }
 
 .circle_close {
-  height: 25px;
-  width: 25px;
+  height: 15px;
+  width: 15px;
   background-color: #FF605C;
   border-radius: 50%;
 
   display:inline-block;
 }
 .circle_minimize {
-  height: 25px;
-  width: 25px;
+  height: 15px;
+  width: 15px;
   background-color: #FFBD44;
   border-radius: 50%;
   display:inline-block;
 }
 .circle_expand {
-  height: 25px;
-  width: 25px;
+  height: 15px;
+  width: 15px;
   background-color: #00CA4E;
   border-radius: 50%;
   display:inline-block;
