--- a/css/rectangle.css
+++ b/css/rectangle.css
@@ -2,45 +2,43 @@
   position: fixed;
   width: auto;
   height: auto;
-  left: 40px;
-  right: 40px;
-  bottom: 40px;
-  top: 40px;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  top: 10px;
   background-color: #dcdedb;
   border-radius: 20px;
   border: 1px solid #000000;
-  opacity: 0.85;
+  opacity: 0.75;
 }
 .rectangle_top {
   padding: 15px;
-  margin: 0px auto;
   width: auto;
   height: auto;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   background-color: #b9bcb8;
   border-bottom:1px solid #c2baba;
-}
 
+}
 .circle_close {
   height: 15px;
   width: 15px;
   background-color: #FF605C;
   border-radius: 50%;
-
-  display:inline-block;
+  display:inline-flex;
 }
 .circle_minimize {
   height: 15px;
   width: 15px;
   background-color: #FFBD44;
   border-radius: 50%;
-  display:inline-block;
+  display:inline-flex;
 }
 .circle_expand {
   height: 15px;
   width: 15px;
   background-color: #00CA4E;
   border-radius: 50%;
-  display:inline-block;
+  display:inline-flex;
 }
