--- a/css/body.css
+++ b/css/body.css
@@ -1,8 +1,3 @@
 html,body {
-  background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-image: url("../img/bg.jpg");
-  width: 100%;
-  height: 100%;
+background-color: #191a19;
 }
