--- a/css/textAnimation.css
+++ b/css/textAnimation.css
@@ -1,25 +1,14 @@
-.container{
-  display: inline-block;
-  font-family: 'Source Code Pro', monospace;
-  font-size: 16px;
-  place-items: center;
-}
-
 .typed {
   overflow: hidden;
   white-space: nowrap;
-  border-right: 2px solid;
   width: 0;
-  animation: typing 9s steps(30, end) forwards, blinking 1s infinite;
+  animation: typing;
+  animation-duration: 1.5s;
+  animation-timing-function: steps(30, end);
+  animation-fill-mode: forwards;
 }
 
 @keyframes typing {
   from { width: 0 }
-  to { width: 100% }
-}
-
-@keyframes blinking {
-  0% {border-color: transparent}
-  50% {border-color: red}
-  100% {border-color: transparent}
+  to { width: auto; }
 }
