--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@
   font-family: "Lucida Console", "Courier New", monospace;
   letter-spacing: 1px;
   color: white;
+  display: table;
 }
 
 .inputText{
@@ -58,11 +59,8 @@
   font-size: 16px;
 }
 .rectangle input{
-
   background-color: #535553;
   border: 0px;
   margin-left: 10px;
-  position: fixed;
-  width: auto;
-  height: auto;
+  
 }
